--- a/package.json
+++ b/package.json
@@ -38,5 +38,6 @@
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1"
-  }
+  },
+  "packageManager": "yarn@4.1.0"
 }
