--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "pages:build": "npx @cloudflare/next-on-pages@1",
     "start": "next start"
   },
   "repository": {
@@ -34,10 +35,14 @@
     "react-hook-form": "^7.43.9"
   },
   "devDependencies": {
+    "@cloudflare/next-on-pages": "^1.11.3",
     "autoprefixer": "^10.4.14",
     "eslint-config-prettier": "^8.8.0",
     "postcss": "^8.4.23",
     "tailwindcss": "^3.3.1"
   },
-  "packageManager": "yarn@4.1.0"
+  "packageManager": "yarn@4.1.0",
+  "resolutions": {
+    "string-width": "4.2.3"
+  }
 }
