--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.43.9"
+    "react-hook-form": "^7.43.9",
+    "sharp": "^0.33.4"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^1.11.3",
